--- a/PushdownAutomata/Configuration.xaml
+++ b/PushdownAutomata/Configuration.xaml
@@ -1,38 +1,66 @@
-﻿<Window x:Class="PushdownAutomata.Configuration"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PushdownAutomata"
-        mc:Ignorable="d"
-        Title="Konfiguracja" Height="360" Width="340">
-    <Grid>
-        <Button x:Name="CloseConf" Content="Zapisz i zamknij" HorizontalAlignment="Left" Height="32" Margin="211,284,0,0" VerticalAlignment="Top" Width="96" Click="button_Click"/>
-        <GroupBox x:Name="groupBox" Header="Wczytano: a" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,31,0,0" Height="185" Width="146">
-            <StackPanel HorizontalAlignment="Left" Height="157" Margin="10,0,0,0" VerticalAlignment="Top" Width="100">
-                <Label x:Name="label" Content="na stosie: F"/>
-                <TextBox x:Name="AEndStack" Height="23" TextWrapping="Wrap" Text="{Binding Path=AEndStack}" PreviewTextInput="OperationValidation" MaxLength="1"/>
-                <Label x:Name="label_Copy" Content="na stosie: a"/>
-                <TextBox x:Name="ASame" Height="23" TextWrapping="Wrap" Text="{Binding Path=ASame}" PreviewTextInput="OperationValidation" MaxLength="1"/>
-                <Label x:Name="label_Copy1" Content="na stosie: b"/>
-                <TextBox x:Name="AOther" Height="23" TextWrapping="Wrap" Text="{Binding Path=AOther}" PreviewTextInput="OperationValidation" MaxLength="1"/>
-            </StackPanel>
-        </GroupBox>
-        <GroupBox x:Name="groupBox_Copy" Header="Wczytano: b" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="161,31,0,0" Height="185" Width="146">
-            <StackPanel HorizontalAlignment="Left" Height="157" Margin="10,0,0,0" VerticalAlignment="Top" Width="100">
-                <Label x:Name="label1" Content="na stosie: F"/>
-                <TextBox x:Name="BEndStack" Height="23" TextWrapping="Wrap" Text="{Binding Path=BEndStack}"  PreviewTextInput="OperationValidation" MaxLength="1"/>
-                <Label x:Name="label_Copy2" Content="na stosie: a"/>
-                <TextBox x:Name="BOther" Height="23" TextWrapping="Wrap" Text="{Binding Path=BOther}"  PreviewTextInput="OperationValidation" MaxLength="1"/>
-                <Label x:Name="label_Copy3" Content="na stosie: b"/>
-                <TextBox x:Name="BSame" Height="23" TextWrapping="Wrap" Text="{Binding Path=BSame}"  PreviewTextInput="OperationValidation" MaxLength="1"/>
-            </StackPanel>
-        </GroupBox>
-        <Label x:Name="label2" Content="F - flaga końca stosu" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label3" Content="Uzupełnij deklarację operacji" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,252,0,-3" TextWrapping="Wrap" Text="Możliwe operacje:   a - dodaj do stosu a b - dodaj do stosu b 1 - zdejmij ze stosu" VerticalAlignment="Top" Width="110"/>
-        <Label x:Name="label_Copy4" Content="Czas przejścia [s]" Margin="207,226,25,81" HorizontalAlignment="Center" HorizontalContentAlignment="Stretch"/>
-        <TextBox x:Name="TimeStep" TextWrapping="Wrap" Text="{Binding Path=TmieStep}"   MaxLength="2" Margin="207,255,25,55"/>
+﻿<Controls:MetroWindow x:Class="PushdownAutomata.Configuration"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+    Title="Konfiguracja"
+    Height="350"
+    Width="330"
 
-    </Grid>
-</Window>
+    BorderThickness="0" 
+    GlowBrush="Black"
+    ResizeMode="NoResize"
+
+    WindowTransitionsEnabled="False"
+    WindowStartupLocation="CenterScreen"
+    ShowIconOnTitleBar="False"
+    ShowTitleBar="True"                      
+    >
+    <StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+
+            <Label x:Name="label3" Content="Uzupełnij deklarację operacji" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Grid.Row="0" Grid.ColumnSpan="2"/>
+
+
+            <GroupBox x:Name="groupBox" Header="Wczytano: a" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0" Height="auto" Width="146" Grid.Column="0" Grid.Row="1">
+                <StackPanel HorizontalAlignment="Left" Height="157" Margin="10,0,0,0" VerticalAlignment="Top" Width="100">
+                    <Label x:Name="label" Content="na stosie: F"/>
+                    <TextBox x:Name="AEndStack" Height="23" TextWrapping="Wrap" Text="{Binding Path=AEndStack}" PreviewTextInput="OperationValidation" MaxLength="1"/>
+                    <Label x:Name="label_Copy" Content="na stosie: a"/>
+                    <TextBox x:Name="ASame" Height="23" TextWrapping="Wrap" Text="{Binding Path=ASame}" PreviewTextInput="OperationValidation" MaxLength="1"/>
+                    <Label x:Name="label_Copy1" Content="na stosie: b"/>
+                    <TextBox x:Name="AOther" Height="23" TextWrapping="Wrap" Text="{Binding Path=AOther}" PreviewTextInput="OperationValidation" MaxLength="1"/>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox x:Name="groupBox_Copy" Header="Wczytano: b" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0" Height="auto" Width="146" Grid.Column="1" Grid.Row="1">
+                <StackPanel HorizontalAlignment="Left" Height="157" Margin="10,0,0,0" VerticalAlignment="Top" Width="100">
+                    <Label x:Name="label1" Content="na stosie: F"/>
+                    <TextBox x:Name="BEndStack" Height="23" TextWrapping="Wrap" Text="{Binding Path=BEndStack}"  PreviewTextInput="OperationValidation" MaxLength="1"/>
+                    <Label x:Name="label_Copy2" Content="na stosie: a"/>
+                    <TextBox x:Name="BOther" Height="23" TextWrapping="Wrap" Text="{Binding Path=BOther}"  PreviewTextInput="OperationValidation" MaxLength="1"/>
+                    <Label x:Name="label_Copy3" Content="na stosie: b"/>
+                    <TextBox x:Name="BSame" Height="23" TextWrapping="Wrap" Text="{Binding Path=BSame}"  PreviewTextInput="OperationValidation" MaxLength="1"/>
+                </StackPanel>
+            </GroupBox>
+            <StackPanel  Grid.Column="0" Grid.Row="2" Grid.RowSpan="2" Margin="10,0,0,0">
+                <Label x:Name="label2" Content="F - flaga końca stosu" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="0,0,0,0" TextWrapping="Wrap" Text="Możliwe operacje:   a - dodaj do stosu a b - dodaj do stosu b 1 - zdejmij ze stosu" VerticalAlignment="Top" Width="111"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="2" Margin="10,0,6,0">
+                <Label x:Name="label_Copy4" Content="Czas przejścia [s]:" Margin="0,0,0,0" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" Width="120"/>
+                <TextBox x:Name="TimeStep" TextWrapping="Wrap" Text="{Binding Path=TmieStep}"   MaxLength="2" Margin="0,0,0,0"/>
+            </StackPanel>
+            <Button x:Name="CloseConf" Content="Zapisz i zamknij" HorizontalAlignment="Right" Height="32" Margin="0,0,6,0" VerticalAlignment="Bottom" Width="auto" Click="button_Click" Grid.Column="1" Grid.Row="3"/>
+        </Grid>
+    </StackPanel>
+</Controls:MetroWindow>
