--- a/PushdownAutomata/MainWindow.xaml
+++ b/PushdownAutomata/MainWindow.xaml
@@ -1,34 +1,47 @@
-﻿<Window x:Class="PushdownAutomata.MainWindow"
+﻿<Controls:MetroWindow x:Class="PushdownAutomata.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PushdownAutomata"
-        mc:Ignorable="d"
-        Title="Automat ze stosem" Height="350" Width="525">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="79*"/>
-            <ColumnDefinition Width="438*"/>
-        </Grid.ColumnDefinitions>
-        <Button x:Name="setting" Content="Konfiguracja" HorizontalAlignment="Left" Height="43" Margin="318.57,10,0,0" VerticalAlignment="Top" Width="109" Grid.Column="1" Click="button_Click"/>
-        <Button x:Name="start" Content="START" HorizontalAlignment="Left" Height="43" Margin="318.57,58,0,0" VerticalAlignment="Top" Width="109" Grid.Column="1" Click="button_Copy_Click"/>
-        <Button x:Name="stop" Content="STOP" HorizontalAlignment="Left" Height="43" Margin="318.57,106,0,0" VerticalAlignment="Top" Width="109" Grid.Column="1" Click="button_Copy1_Click"/>
-        <Button x:Name="close" Content="ZAMKNIJ" HorizontalAlignment="Left" Height="43" Margin="319,270,0,0" VerticalAlignment="Top" Width="109" Grid.Column="1" Click="close_Click"/>
-        <Button x:Name="reset" Content="RESET" HorizontalAlignment="Left" Height="43" Margin="318.57,154,0,0" VerticalAlignment="Top" Width="109" Grid.Column="1" Click="reset_Click"/>
-        <TextBox x:Name="inputText" HorizontalAlignment="Left" Height="25" Margin="10,47,0,0" TextWrapping="Wrap" Text="aba" VerticalAlignment="Top" Width="229" Grid.ColumnSpan="2" Background="#FFE2BABA" PreviewTextInput="InputValidation"/>
-        <Label x:Name="label_Copy4" Content="Ciąg danych wejściowych" HorizontalAlignment="Left" Height="37" Margin="10,10,0,0" VerticalAlignment="Top" Width="229" Grid.ColumnSpan="2"/>
-        <TextBlock x:Name="ProcessingChar" HorizontalAlignment="Left" Margin="10,77,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="232" Width="229"/>
-        <GroupBox x:Name="groupBox" Grid.Column="1" Header="STOS" HorizontalAlignment="Left" Margin="205,10,0,0" VerticalAlignment="Top" Height="303" Width="109" FontWeight="SemiBold">
-            <StackPanel HorizontalAlignment="Left" Height="auto" Margin="6,6,0,0" VerticalAlignment="Top" Width="auto">
-                <Label x:Name="label" Content="Góra stosu ↓" HorizontalAlignment="Left" VerticalAlignment="Top" Width="87"/>
-                <ListBox x:Name="stackGraph" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFF09191" VerticalContentAlignment="Bottom" TextOptions.TextHintingMode="Animated" Width="40" Height="207">
-                    <ListBox.Effect>
-                        <DropShadowEffect/>
-                    </ListBox.Effect>
-                </ListBox>
-            </StackPanel>
-        </GroupBox>
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+        Title="Automat ze stosem"
+        Height="361.983"
+        Width="526.906"
+        MinHeight="360"
+        MinWidth="525"
 
+        BorderThickness="0" 
+        GlowBrush="Black"
+        ResizeMode="CanResizeWithGrip"
+
+        WindowTransitionsEnabled="False"
+        WindowStartupLocation="CenterScreen">
+    <Grid x:Name="grid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="AUTO"/>
+            <ColumnDefinition Width="AUTO"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Width="auto" Grid.Column="0">
+            <Label x:Name="label_Copy4" Content="Ciąg danych wejściowych:" HorizontalAlignment="Left" Height="37" Margin="10,0,0,0" VerticalAlignment="Bottom" Width="229" Grid.ColumnSpan="2" VerticalContentAlignment="Bottom"/>
+            <TextBox x:Name="inputText" HorizontalAlignment="Left" TextChanged="inputText_TextChanged" Height="25" Margin="10,0,0,0" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Wprowadź ciąg" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229" Grid.ColumnSpan="2" PreviewTextInput="InputValidation" BorderBrush="#FF0606F1"/>
+            <TextBlock x:Name="ProcessingChar" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="auto" Width="auto"/>
+        </StackPanel>
+        <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,10,10,0">
+            <GroupBox x:Name="groupBox" Grid.Column="1" Header="STOS" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="303" Width="109" FontWeight="SemiBold">
+                <StackPanel HorizontalAlignment="Left" Height="auto" Margin="6,6,0,0" VerticalAlignment="Top" Width="auto">
+                    <Label x:Name="label" Content="Góra stosu &#8628;" HorizontalAlignment="Left" VerticalAlignment="Top" Width="87"/>
+                    <ListBox x:Name="stackGraph" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFF09191" VerticalContentAlignment="Bottom" TextOptions.TextHintingMode="Animated" Width="40" Height="207">
+                        <ListBox.Effect>
+                            <DropShadowEffect/>
+                        </ListBox.Effect>
+                    </ListBox>
+                </StackPanel>
+            </GroupBox>
+        </StackPanel>
+        <StackPanel Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,10,10,0" Height="{Binding Height, ElementName=grid}">
+            <Button x:Name="setting" Content="Konfiguracja" Margin="0,0,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="109" Click="button_Click"/>
+            <Button x:Name="start" Content="START" Margin="0,10,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="109" Click="button_Copy_Click" IsEnabled="False"/>
+            <Button x:Name="close" Content="ZAMKNIJ" Margin="0,160,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Bottom" Width="109" Click="close_Click"/>
+        </StackPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
