--- a/PushdownAutomata/MainWindow.xaml
+++ b/PushdownAutomata/MainWindow.xaml
@@ -23,7 +23,9 @@
 
         <StackPanel Width="auto" Grid.Column="0">
             <Label x:Name="label_Copy4" Content="Ciąg danych wejściowych:" HorizontalAlignment="Left" Height="37" Margin="10,0,0,0" VerticalAlignment="Bottom" Width="229" Grid.ColumnSpan="2" VerticalContentAlignment="Bottom"/>
-            <TextBox x:Name="inputText" HorizontalAlignment="Left" TextChanged="inputText_TextChanged" Height="25" Margin="10,0,0,0" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Wprowadź ciąg" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229" Grid.ColumnSpan="2" PreviewTextInput="InputValidation" BorderBrush="#FF0606F1"/>
+            <TextBox x:Name="inputText" HorizontalAlignment="Left" TextChanged="inputText_TextChanged" Height="25" Margin="10,0,0,0" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Wprowadź ciąg" TextWrapping="Wrap" Text="" VerticalAlignment="Top"  Grid.ColumnSpan="2" PreviewTextInput="InputValidation" BorderBrush="#FF0606F1"/>
+            <ProgressBar x:Name="Progress" Height="15" VerticalAlignment="Bottom" Margin="10,0,10,0" Minimum="0" Maximum="100" Value="0"/>
+
             <TextBlock x:Name="ProcessingChar" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="auto" Width="auto"/>
         </StackPanel>
         <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,10,10,0">
