--- a/PushdownAutomata/MainWindow.xaml
+++ b/PushdownAutomata/MainWindow.xaml
@@ -4,9 +4,9 @@
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         Title="Automat ze stosem"
         Height="361.983"
-        Width="526.906"
+        Width="600"
         MinHeight="360"
-        MinWidth="525"
+        MinWidth="600"
 
         BorderThickness="0" 
         GlowBrush="Black"
@@ -16,34 +16,33 @@
         WindowStartupLocation="CenterScreen">
     <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="AUTO"/>
-            <ColumnDefinition Width="AUTO"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="150"/>
         </Grid.ColumnDefinitions>
 
         <StackPanel Width="auto" Grid.Column="0">
             <Label x:Name="label_Copy4" Content="Ciąg danych wejściowych:" HorizontalAlignment="Left" Height="37" Margin="10,0,0,0" VerticalAlignment="Bottom" Width="229" Grid.ColumnSpan="2" VerticalContentAlignment="Bottom"/>
-            <TextBox x:Name="inputText" HorizontalAlignment="Left" TextChanged="inputText_TextChanged" Height="25" Margin="10,0,0,0" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Wprowadź ciąg" TextWrapping="Wrap" Text="" VerticalAlignment="Top"  Grid.ColumnSpan="2" PreviewTextInput="InputValidation" BorderBrush="#FF0606F1"/>
-            <ProgressBar x:Name="Progress" Height="15" VerticalAlignment="Bottom" Margin="10,0,10,0" Minimum="0" Maximum="100" Value="0"/>
+            <TextBox x:Name="inputText" HorizontalAlignment="Left" TextChanged="inputText_TextChanged" Height="25" Margin="10,0,0,0" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Wprowadź ciąg" TextWrapping="Wrap" VerticalAlignment="Top"  Grid.ColumnSpan="2" PreviewTextInput="InputValidation" BorderBrush="#FF0606F1" Width="261"/>
+            <TextBlock x:Name="ProcessingChar" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="215" Width="auto"/>
+            <Grid>
+                <ProgressBar x:Name="Progress" Height="25" VerticalAlignment="Bottom" Margin="10,0" Minimum="0" Maximum="100" Value="0"/>
+                <TextBlock Text="{Binding Value, ElementName=Progress, StringFormat=\{0:0\}%}" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.458,-0.542" Margin="132,0" />
+            </Grid>
+        </StackPanel>
 
-            <TextBlock x:Name="ProcessingChar" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="auto" Width="auto"/>
-        </StackPanel>
-        <StackPanel Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,10,10,0">
-            <GroupBox x:Name="groupBox" Grid.Column="1" Header="STOS" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="303" Width="109" FontWeight="SemiBold">
-                <StackPanel HorizontalAlignment="Left" Height="auto" Margin="6,6,0,0" VerticalAlignment="Top" Width="auto">
-                    <Label x:Name="label" Content="Góra stosu &#8628;" HorizontalAlignment="Left" VerticalAlignment="Top" Width="87"/>
-                    <ListBox x:Name="stackGraph" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFF09191" VerticalContentAlignment="Bottom" TextOptions.TextHintingMode="Animated" Width="40" Height="207">
-                        <ListBox.Effect>
-                            <DropShadowEffect/>
-                        </ListBox.Effect>
-                    </ListBox>
-                </StackPanel>
-            </GroupBox>
-        </StackPanel>
-        <StackPanel Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,10,10,0" Height="{Binding Height, ElementName=grid}">
+        <GroupBox x:Name="groupBox" Grid.Column="1" Header="STOS" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="303" Width="130" FontWeight="SemiBold">
+            <StackPanel x:Name="abc" HorizontalAlignment="Left" Height="auto" Margin="6,6,0,0" VerticalAlignment="Top" Width="auto">
+                <Label x:Name="label" Content="Góra stosu &#8628;" HorizontalAlignment="Left" VerticalAlignment="Top" Width="107" FontSize="15"/>
+                <Border BorderThickness="1.25" BorderBrush="#FF0606F1" Width="50">
+                    <TextBlock x:Name="stackGraph" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="221" FontSize="14" IsEnabled="False" Foreground="Red" TextAlignment="Center"/>
+                </Border>
+            </StackPanel>
+        </GroupBox>
+        <StackPanel Width="auto" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,10,10,0" Height="{Binding Height, ElementName=grid}">
             <Button x:Name="setting" Content="Konfiguracja" Margin="0,0,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="109" Click="button_Click"/>
             <Button x:Name="start" Content="START" Margin="0,10,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="109" Click="button_Copy_Click" IsEnabled="False"/>
-            <Button x:Name="close" Content="ZAMKNIJ" Margin="0,160,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Bottom" Width="109" Click="close_Click"/>
+            <Button x:Name="close" Content="ZAMKNIJ" Margin="0,160,0,0" HorizontalAlignment="Left" Height="49" VerticalAlignment="Bottom" Width="109" Click="close_Click"/>
         </StackPanel>
     </Grid>
 </Controls:MetroWindow>
