--- a/PushdownAutomata/MainWindow.xaml
+++ b/PushdownAutomata/MainWindow.xaml
@@ -3,20 +3,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         Title="Automat ze stosem"
-        Height="361.983"
-        Width="600"
+        Height="360"
+        Width="700"
         MinHeight="360"
-        MinWidth="600"
+        MinWidth="700"
 
         BorderThickness="0" 
         GlowBrush="Black"
-        ResizeMode="CanResizeWithGrip"
+        ResizeMode="NoResize"
 
         WindowTransitionsEnabled="False"
         WindowStartupLocation="CenterScreen">
     <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="400"/>
             <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="150"/>
         </Grid.ColumnDefinitions>
@@ -24,12 +24,13 @@
         <StackPanel Width="auto" Grid.Column="0">
             <Label x:Name="label_Copy4" Content="Ciąg danych wejściowych:" HorizontalAlignment="Left" Height="37" Margin="10,0,0,0" VerticalAlignment="Bottom" Width="229" Grid.ColumnSpan="2" VerticalContentAlignment="Bottom"/>
             <TextBox x:Name="inputText" HorizontalAlignment="Left" TextChanged="inputText_TextChanged" Height="25" Margin="10,0,0,0" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Wprowadź ciąg" TextWrapping="Wrap" VerticalAlignment="Top"  Grid.ColumnSpan="2" PreviewTextInput="InputValidation" BorderBrush="#FF0606F1" Width="261"/>
-            <TextBlock x:Name="ProcessingChar" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="215" Width="auto"/>
+            <Image x:Name="image" Margin="10,10,0,10" Source="graf.jpg" Height="203"/>
             <Grid>
                 <ProgressBar x:Name="Progress" Height="25" VerticalAlignment="Bottom" Margin="10,0" Minimum="0" Maximum="100" Value="0"/>
                 <TextBlock Text="{Binding Value, ElementName=Progress, StringFormat=\{0:0\}%}" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.458,-0.542" Margin="132,0" />
             </Grid>
         </StackPanel>
+        <Label x:Name="Aoperation" Content="" Padding="0" Margin="177,100,140,203" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="14" FontWeight="SemiBold" Foreground="#FF712EE6"/>
 
         <GroupBox x:Name="groupBox" Grid.Column="1" Header="STOS" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="303" Width="130" FontWeight="SemiBold">
             <StackPanel x:Name="abc" HorizontalAlignment="Left" Height="auto" Margin="6,6,0,0" VerticalAlignment="Top" Width="auto">
@@ -42,7 +43,15 @@
         <StackPanel Width="auto" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,10,10,0" Height="{Binding Height, ElementName=grid}">
             <Button x:Name="setting" Content="Konfiguracja" Margin="0,0,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="109" Click="button_Click"/>
             <Button x:Name="start" Content="START" Margin="0,10,0,0" HorizontalAlignment="Left" Height="43" VerticalAlignment="Top" Width="109" Click="button_Copy_Click" IsEnabled="False"/>
-            <Button x:Name="close" Content="ZAMKNIJ" Margin="0,160,0,0" HorizontalAlignment="Left" Height="49" VerticalAlignment="Bottom" Width="109" Click="close_Click"/>
+            <Button x:Name="close" Content="ZAMKNIJ" Margin="0,5,0,0" HorizontalAlignment="Left" Height="49" VerticalAlignment="Bottom" Width="109" Click="close_Click"/>
         </StackPanel>
+        <Label x:Name="Boperation" Content="" Padding="0" Margin="0,225,278,0" VerticalContentAlignment="Center" VerticalAlignment="Top" HorizontalContentAlignment="Right" HorizontalAlignment="Right" FontWeight="SemiBold" FontSize="14" Foreground="#FF712EE6"/>
+        <Label x:Name="Foperration" Content="F/1" Padding="0" Margin="0,147,161,0" VerticalContentAlignment="Center" VerticalAlignment="Top" HorizontalContentAlignment="Right" HorizontalAlignment="Right" FontWeight="SemiBold" FontSize="14" Foreground="#FF712EE6"/>
+        <Border x:Name="StartState" CornerRadius="25" BorderThickness="3" BorderBrush="#FFFFFF2F" Width="65" Height="65" Margin="51,141,284,125">
+        </Border>
+        <Border x:Name="ChangeState" CornerRadius="25" BorderThickness="3,5" BorderBrush="#FF58EE58" Width="65" Height="65" Margin="116,143,219,123">
+        </Border>
+        <Border x:Name="FinishState" CornerRadius="25" BorderThickness="3" BorderBrush="Red" Width="80" Height="80" Margin="281,133,39,118" Padding="10" Panel.ZIndex="100">
+        </Border>
     </Grid>
 </Controls:MetroWindow>
